--- a/web-portfolio/package.json
+++ b/web-portfolio/package.json
@@ -13,7 +13,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-useanimations": "^2.10.0"
+    "react-simple-typewriter": "^5.0.1",
+    "react-type-animation": "^3.1.0",
+    "react-typical": "^0.1.3",
+    "react-typing-animation": "^1.6.2",
+    "react-useanimations": "^2.10.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
